# snake_tron_bot

./: Cargo.toml  sample.json
src/: main.rs
src/game/: grid.rs  mod.rs  model.rs  play.rs  snake.rs
src/server/: mod.rs  model.rs  router.rs  routes.rs
