[package]
name = "snake_tron_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.3"
http = "0.2.4"
serde = { version = "1.0.129", features = ["derive"] }
tokio = { version = "1.10.1", features = ["full"] }
tower = "0.4.8"
tower-http = { version = "0.1.1", features = ["set-header", "trace"] }
tracing = { version = "0.1.26" }
tracing-subscriber = "0.2.20"
